Organize width and gap and ensure text inside profile card

--- a/styles/components/profile-card.scss
+++ b/styles/components/profile-card.scss
@@ -11,8 +11,8 @@
   width: 100%;
 
   .description-img {
-    width: 15em;
-    height: 22em;
+    width: 18em;
+    height: 24em;
     border-radius: 1em;
     object-fit: cover;
     opacity: 1;
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 15em;
+    width: 18em;
     margin-left: 0.5em;
     gap: 1.5em;
     position: relative;
@@ -76,31 +76,19 @@
 
   &:hover {
     & .description-img {
-      opacity: 0.1;
+      opacity: 0.2;
     }
 
     & .description-secondary {
-      display: block;
+      display: flex;
       position: absolute;
-      width: 14em;
-      transform: translateY(-2em); /* Move it up by its own height */
-      transition: transform 0.3s ease-in-out; /* Add a transition for smooth movement */
+      width: 16.5em;
+      gap: 1em;
+      transform: translateY(-2em);
+      transition: transform 0.3s ease-in-out;
       z-index: 1;
     }
   }
-
-  // .description-secondary:hover {
-  //   display: block;
-  //   position: absolute;
-  //   width: 14em;
-  //   transform: translateY(-5em); /* Move it up by its own height */
-  //   transition: transform 0.3s ease-in-out; /* Add a transition for smooth movement */
-  //   z-index: -1;
-
-  //   ~ .description-main img {
-  //     opacity: 0.1;
-  //   }
-  // }
 }
 
 @media screen and (max-width: 768px) {
