--- a/styles/pages/about-page.scss
+++ b/styles/pages/about-page.scss
@@ -13,7 +13,8 @@
     justify-content: center;
     align-items: flex-start;
     margin: 5rem auto;
-    width: min(85vw, 70rem);
+    width: 100%;
+    gap: 1.5em;
   }
 
   .footer {
